developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_cannot_read_bitmap_file.kmn
store(&NAME) 'test_missing_icon'
store(&TARGETS) 'windows'
store(&BITMAP) 'test_missing_icon_missing.ico'

begin Unicode > use(main)

group(main) using keys
